creator/style.css
:root{
	--cell-size: 80px;
	--ui-size: 20px;
	--grid-width: 5;
	--grid-height: 5;
}

::selection {
	background-color: transparent;
}

html {
	height: 100%;
}

body {
	width: 100%;
	height: 100%;
	cursor: default;
	margin: 0;
	display: flex;
	font-family: "Milliard Medium", Arial, Helvetica, sans-serif;
	line-height: 1.4;
	overflow: hidden;
}

div.option {
	line-height: 1.25;
	padding: 1px;
}

/* Toolbar */

#toolbar {
	display: flex;
	flex-direction: column;
	font-size: var(--ui-size);
	flex: 0 0 10%;
    overflow-y: scroll;
    scrollbar-width: 0;
}

#toolbar::-webkit-scrollbar {
	display: none;
}

#toolbar .toolbar-item {
	margin: 6% 0;
	display: flex;
	flex-direction: column;
	justify-content: center;
}

h1.header {
	font-size: calc(var(--ui-size) * 1.5);
	text-align: center;
	margin: auto;
}

div.input-row {
	display: flex;
	justify-content: space-evenly;
}

div.increment {
	width: calc(var(--ui-size) * 2);
	height: calc(var(--ui-size) * 2);
	border: none;
	background-size: cover;
	background-repeat: no-repeat;
	cursor: pointer;
}

div.input-value {
	font-size: calc(var(--ui-size) * 2);
	margin-top: calc(var(--ui-size) * -0.4);
	text-align: center;
}

div.lock-aspect {
	width: calc(var(--ui-size) * 3);
	height: calc(var(--ui-size) * 1.5);
	border: none;
	background-size: cover;
	background-repeat: no-repeat;
	cursor: pointer;
}

div.single-select {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
}

div.mode {
	width: calc(var(--ui-size) * 3);
	height: calc(var(--ui-size) * 3);
	border: none;
	background-size: cover;
	background-repeat: no-repeat;
	cursor: pointer;
	flex: 0 0 auto;
}

.single-select .selector {
	width: 100%;
	height: 10%;
	margin-top: 4px;
	flex: 0 0 auto;
	opacity: 0%;
}

.single-select .selector.selected {
	opacity: 100%;
}

.toolbar-item .option {
	margin: 4px;
	border-radius: 0;
	cursor: pointer;
	font-size: calc(var(--ui-size) * 1.3);
	flex: 0 0;
    text-align: center;
}

a:link, a:hover, a:visited, a:active {
    color: inherit;
    text-decoration: inherit;
}

span.toggle, span.toggle-theme {
	font-weight: bold;
}

/* File import */

div.dropzone {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 1000;
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: calc(var(--ui-size) * 2);
	/* Animation */
	visibility: hidden;
	opacity: 0;
	transition: visibility 175ms, opacity 175ms;
}

div.dropzone.active {
	visibility: visible;
	opacity: 100%;
}

/* Header */

#content {
	position: relative;
	height: 100%;
	flex: 2 0 55%;
}

#content #header {
	position: absolute;
	top: 0;
	left: 0;
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	align-items: center;
	width: 100%;
	height: 10%;
}

#header span {
	background: none;
	min-width: 15%;
	text-align: center;
	padding: 2px 4px;
	cursor: text;
	font-family: Georgia, 'Times New Roman', Times, serif;
	border-width: thin;
	border-style: solid;
}

span.head-title {
	font-size: calc(var(--ui-size) * 1.5);
}

span.head-byline {
	font-size: calc(var(--ui-size));
}

#watermark {
	display: none;
}

/* Grid */

#main-grid, #main-grid .cell {
	border-collapse: collapse;
	margin: 10% auto 0;
	font-family: Georgia, 'Times New Roman', Times, serif;
	border-width: calc(var(--cell-size) * 0.05);
	border-style: solid;
}

#main-grid .cell {
	position: relative;
	text-align: center;
	font-size: calc(var(--cell-size) * 0.5);
	font-weight: normal;
	width: var(--cell-size);
	height: var(--cell-size);
	background-clip: padding-box;
}

#main-grid .cell.selected-clue {
	font-weight: bold;
}

#main-grid .cell .cell-label {
	position: absolute;
	left: 5%;
	top: 0;
	line-height: 0.8em;
	font-size: calc(var(--cell-size) * 0.35);
	font-weight: normal;
}

/* Clues lists */

.clues-section {
	display: flex;
	flex-direction: column;
	font-size: var(--ui-size);
	flex: 1 1 15%;
	border-left-width: medium;
	border-left-style: solid;
}

.clues-section h1.header {
	margin: 0;
	padding: 8px 0;
	flex: 0 0;
	border-bottom-width: medium;
	border-bottom-style: solid;
}

div.add-item {
	cursor: pointer;
	font-size: calc(var(--ui-size) * 1.3);
	flex: 0 0;
	text-align: center;
	border: none;
	border-radius: 0;
	border-bottom-width: thin;
	border-bottom-style: solid;
}

.clues-section .clues-list {
	flex: 1 0;
	overflow-y: scroll;
	scrollbar-width: 0;
}

.clues-section .clues-list::-webkit-scrollbar {
	display: none;
}

.clues-list div.clue-entry {
	display: flex;
	align-items: center;
	padding: 4px 2px;
	border-bottom-width: thin;
	border-bottom-style: solid;
}

.clue-entry span.clue-label {
	font-weight: bold;
	font-size: calc(var(--ui-size) * 1.2);
	margin-left: 4px;
	margin-right: 8px;
}

.clue-entry div.clue-desc {
	flex: 1 0;
	cursor: text;
	font-family: Georgia, 'Times New Roman', Times, serif;
	line-height: normal;
	padding: 0 4px;
}

.clue-entry div.clue-action {
	width: var(--ui-size);
	height: var(--ui-size);
	border: none;
	background-size: cover;
	background-repeat: no-repeat;
	cursor: pointer;
}

/* Auto-suggest */

#auto-suggest {
	position: absolute;
	top: 1%;
	left: 1%;
}

#auto-suggest #suggest {
	position: relative;
	width: calc(var(--ui-size) * 3.5);
	height: calc(var(--ui-size) * 3.5);
    border: 2px solid;
	border-radius: 50%;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
	cursor: pointer;
	z-index: 12;
	/* Animation */
	transform: rotate(0);
	transition: transform 0.5s;
}

#auto-suggest.open-bar #suggest, #auto-suggest.refreshing #suggest {
	transform: rotate(0.6turn);
}

#auto-suggest #suggestions {
	display: flex;
	position: absolute;
	top: calc(var(--ui-size) * 0.25);
	left: calc(var(--ui-size) * 2);
	height: calc(var(--ui-size) * 3);
	z-index: 10;
	font-size: var(--ui-size);
	/* Animation */
	transform: translateX(-50%) scaleX(0);
	opacity: 0;
	transition: transform 0.3s, opacity 0.2s 0.1s;
}

#auto-suggest.open-bar #suggestions, #auto-suggest.refreshing #suggestions {
	transform: translateX(0) scaleX(1);
	opacity: 100%;
	transition: transform 0.2s 0.1s, opacity 0.3s;
}

#suggestions div {
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 0 8px;
	white-space: nowrap;
	overflow: hidden;
	cursor: pointer;
    border-style: solid;
	border-width: 2px 1px 2px 1px;
}

#suggestions div:first-child {
	padding-left: calc(8px + var(--ui-size) * 1.5);
}

#suggestions div.close {
	display: block;
	background-size: cover;
	box-sizing: border-box;
	border-right-width: 2px;
	width: calc(var(--ui-size) * 3);
	height: 100%;
	border-radius: 0 50% 50% 0;
}

#auto-suggest div.nav {
	display: flex;
	position: absolute;
	top: calc(var(--ui-size) * 2.5);
	left: calc(var(--ui-size) * 1.75);
	z-index: 8;
	/* Animation */
	transform: translateY(-50%) scaleY(0);
	opacity: 0;
	transition: transform 0.2s, opacity 0.1s 0.1s;
}

#auto-suggest.open-bar:not(.empty) div.nav, #auto-suggest.refreshing div.nav {
	transform: translateY(0) scaleY(1);
	opacity: 100%;
	transition: transform 0.2s 0.2s, opacity 0.3s 0.1s;
}

#auto-suggest .nav div.scroll-button {
	background-size: cover;
	width: calc(var(--ui-size) * 3);
	height: calc(var(--ui-size) * 3);
	border-style: solid;
	cursor: pointer;
}

#auto-suggest .nav div.scroll-button.disabled {
	opacity: 40%;
}

#auto-suggest .nav div.scroll-button[data-value="-1"] {
    border-width: 2px 1px 2px 2px;
	border-radius: 0 0 0 25%;
}

#auto-suggest .nav div.scroll-button[data-value="1"] {
    border-width: 2px 2px 2px 1px;
	border-radius: 0 0 25% 0;
}

/* Rentable link */

a#rentable-link {
    position: relative;
    bottom: 0px;
    left: 0px;
    width: calc(var(--ui-size) * 4);
    height: calc(var(--ui-size) * 4);
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: calc(var(--ui-size) * 1.4);
    margin: auto;
}

a#rentable-link:hover, a#rentable-link:visited, a#rentable-link:link, a#rentable-link:active {
    color: inherit;
    text-decoration: none;
}

a#rentable-link .icon {
    position: absolute;
    top: 0;
    left: 0;
    background-size: cover;
    width: 100%;
    height: 100%;
    /* Animation */
    transform: rotate(0);
    transition: transform 0.3s;
}

a#rentable-link:hover .icon {
    transform: rotate(-0.5turn);
}

a#rentable-link .label-tl, a#rentable-link .label-br {
    position: absolute;
    height: 50%;
    width: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

a#rentable-link .label-tl {
    top: 4%;
    left: 4%;
}

a#rentable-link .label-br {
    bottom: 3%;
    right: 4.2%;
}

/* Notifications */

#notifications {
	position: fixed;
	bottom: 0;
	right: 0;
	font-size: var(--ui-size);
	width: 30ch;
}

#notifications .notification {
	border: thin solid;
	padding: calc(var(--ui-size));
	margin: calc(var(--ui-size) * 0.8);
	/* cursor: pointer; */
	/* Animation */
	transition: transform 0.1s;
	transform: translateY(0);
}

#notifications .notification.new-notif {
	transform: translateY(100%);
}

/* Printer friendly */

@media print {
	@page {
		size: 8.5in 11in;
	}

	body {
		display: block;
		flex-direction: column;
		--cell-size: calc(min(calc(7.5in / max(8, var(--grid-width))), calc(8.5in / var(--grid-height))) - 2px);
		font-family: Georgia, 'Times New Roman', Times, serif;
	}

	#toolbar, #auto-suggest, .clues-section .add-item, .clue-entry .clue-action,
	#notifications, .dropzone {
		display: none;
	}

	#content {
		background-color: transparent !important;
	}

	.clues-section {
		page-break-before: always;
	}

	#content #header {
		position: initial;
		height: unset;
		margin-bottom: 4px;
	}

	#content #header span {
		border-width: 0;
		padding: 0;
	}

	#main-grid {
		margin: 0 auto;
	}

	#main-grid .cell {
		border-width: min(4px, max(2px, calc(var(--cell-size) * 0.05)));
	}
	
	#main-grid .cell:not(.black) {
		background-color: transparent !important;
	}

	#main-grid .cell span:not(.cell-label) {
		color: transparent;
	}

	.clues-section, .clues-list div.clue-entry {
		border-width: 0;
	}

	.clue-entry {
		background-color: transparent !important;
	}

	.clue-entry span.clue-label {
		font-weight: normal;
		font-size: calc(var(--ui-size) * 1.1);
	}

	#watermark {
		display: block;
		float: right;
	}
}

